trunk/Archive2/cd/3bb114656f2b6c/output
main.cpp:16:5: error: no matching function for call to 'swap'
    swap( num1, num2 ); // *** error
    ^~~~
main.cpp:3:6: note: candidate function not viable: no known conversion from 'int' to 'int *' for 1st argument; take the address of the argument with &
void swap(int *num1, int *num2)
     ^
1 error generated.
